fixed spacing for texticon

--- a/frontend/src/styles/settings.scss
+++ b/frontend/src/styles/settings.scss
@@ -165,7 +165,8 @@
       align-items: baseline;
       .fab,
       .fas,
-      .far {
+      .far,
+      .textIcon {
         margin-right: 0.5em;
         margin-bottom: 0.5em;
       }
